# StudentManager

./: CMakeLists.txt  CsvFileOperation.cpp  CsvFileOperation.h  FileOperation.cpp  FileOperation.h  JsonFileOperation.cpp  JsonFileOperation.h  Student.cpp  Student.h  StudentManager.cpp  StudentManager.h  XmlFileOperation.cpp  XmlFileOperation.h  main.cpp
